add normalize, css and png to public folder

--- a/react-version/public/index.html
+++ b/react-version/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
       <!-- External CSS -->
-  <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+  <link rel="stylesheet" href="normalize-4.1.1.css" type="text/css" />
   <!-- external font from Google -->
   <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro:300,400,600" rel="stylesheet">
   <!-- font awesome (stretch) -->
